<resources>
    <string name="app_name">Exercise1PAM</string>
    <string name="welcome">Hello</string>
    <string name="name">Username</string>
    <string name="email">Masukkan Email</string>
    <string name="edpassword">Password</string>
    <string name="password">Masukkan Password</string>
    <string name="btnsignin">Sign In</string>
    <string name="use">Zulfa</string>
    <string name="confirm">Konfirmasi</string>
    <string name="logout">Keluar</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="task">Tugas</string>
    <string name="schedule">Masukkan Jadwal</string>
    <string name="day">Masukkan Hari</string>
    <string name="date">Masukkan Tanggal</string>
    <string name="jadwal">Jadwal</string>
    <string name="hari">Hari</string>
    <string name="tanggal">Tanggal</string>
    <string name="register">Register</string>
    <string name="username">Nama</string>
    <string name="masukkan_nama">masukkan nama</string>
    <string name="input_email">Masukkan Email</string>
    <string name="Re_password">Re-Password</string>
    <string name="re_email">Email</string>
</resources>
