<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="203dp"
        android:layout_height="140dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/Register"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="14pt"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Nama"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="9pt" />

    <EditText
        android:id="@+id/masukkan_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/material_dynamic_primary90"
        android:ems="10"
        android:hint="@string/masukkan_nama"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:text="@string/re_email"
        android:textColor="@color/black"
        android:textSize="9pt" />

    <EditText
        android:id="@+id/tulisemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/material_dynamic_primary90"
        android:drawableLeft="@android:drawable/sym_action_email"
        android:ems="10"
        android:hint="@string/input_email"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/masukkan_password"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:text="@string/edpassword"
        android:textColor="@color/black"
        android:textSize="9pt" />

    <EditText
        android:id="@+id/masukkan_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/material_dynamic_primary90"
        android:drawableLeft="@android:drawable/ic_lock_idle_lock"
        android:drawableRight="@android:drawable/ic_menu_view"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/re_pass"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:text="@string/Re_password"
        android:textColor="@color/black"
        android:textSize="9pt" />

    <EditText
        android:id="@+id/masukkan_repass"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/material_dynamic_primary90"
        android:drawableLeft="@android:drawable/ic_lock_idle_lock"
        android:drawableRight="@android:drawable/ic_menu_view"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:textSize="26sp" />

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:text="@string/register" />
</LinearLayout>